--- a/src/components/Accounts/style.css
+++ b/src/components/Accounts/style.css
@@ -1,9 +1,16 @@
 .account {
-  width: 40%;
-  float: left;
-  padding: 1em;
+  flex: 0 1 50%;
+  width: 50%;
+  padding: 1em 0;
+}
+
+.account>div {
   margin: 1em;
+  height: 100%;
+  padding: 1em;
 }
 
 .accounts {
+  display: flex;
+  flex-wrap: wrap;
 }
