--- a/src/reset.css
+++ b/src/reset.css
@@ -9,6 +9,16 @@
   color: rgba(255, 255, 255, 0.75);
 }
 
+:root a, :root a:visited {
+  text-decoration: none;
+  cursor: pointer;
+  color: rgb(0, 151, 167);
+}
+
+:root a:hover {
+  color: rgb(0, 174, 193);
+}
+
 :root .reset { font-size: initial; width: 100%; height: 100%; }
 /* shame:on */
 /* Material-ui is changing input properties with inline styles. */
