--- a/src/ui/NewAccount/style.css
+++ b/src/ui/NewAccount/style.css
@@ -1,3 +1,28 @@
 .info {
   padding-bottom: 1em;
 }
+
+.password {
+  flex: 0 1 50%;
+  width: 50%;
+}
+
+.passwords {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.identities, .selector {
+  display: flex;
+}
+
+.selector {
+  margin-top: 1.5em;
+}
+
+.identities .identity, .selector .button {
+  flex: 0 1 20%;
+  width: 20% !important;
+  text-align: center;
+  cursor: pointer;
+}
