--- a/src/ui/Form/style.css
+++ b/src/ui/Form/style.css
@@ -1,6 +1,14 @@
 .form {
 }
 
+.autofill {
+  height: 0;
+  width: '1px';
+  position: 'absolute';
+  left: 0;
+  top: 0;
+}
+
 :root .form input:-webkit-autofill {
   display: none;
   opacity: 0;
